// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`denormalize can create nested directories 1`] = `
Object {
  "directories": Array [
    Object {
      "directoryShortid": "GXOoy",
      "shortid": "0",
      "title": "test",
    },
  ],
  "modules": Array [
    Object {
      "code": "",
      "directoryShortid": "0",
      "isBinary": false,
      "sha": undefined,
      "shortid": "1",
      "title": "new-file.js",
      "uploadId": undefined,
    },
  ],
}
`;

exports[`denormalize can create only directory 1`] = `
Object {
  "directories": Array [
    Object {
      "directoryShortid": "GXOoy",
      "shortid": "0",
      "title": "test",
    },
    Object {
      "directoryShortid": "0",
      "shortid": "1",
      "title": "test2",
    },
  ],
  "modules": Array [],
}
`;

exports[`denormalize can denormalize 1`] = `
Object {
  "directories": Array [
    Object {
      "directoryShortid": undefined,
      "shortid": "0",
      "title": "world",
    },
    Object {
      "directoryShortid": "0",
      "shortid": "1",
      "title": "hello",
    },
  ],
  "modules": Array [
    Object {
      "code": "hello",
      "directoryShortid": undefined,
      "isBinary": false,
      "sha": undefined,
      "shortid": "2",
      "title": "index.js",
      "uploadId": undefined,
    },
    Object {
      "code": "hello2",
      "directoryShortid": "0",
      "isBinary": false,
      "sha": undefined,
      "shortid": "3",
      "title": "index.js",
      "uploadId": undefined,
    },
    Object {
      "code": "hello3",
      "directoryShortid": "1",
      "isBinary": false,
      "sha": undefined,
      "shortid": "4",
      "title": "index.js",
      "uploadId": "123",
    },
  ],
}
`;

exports[`denormalize can filter out existing directories 1`] = `
Object {
  "directories": Array [],
  "modules": Array [
    Object {
      "code": "hello",
      "directoryShortid": undefined,
      "isBinary": false,
      "sha": undefined,
      "shortid": "0",
      "title": "index.js",
      "uploadId": undefined,
    },
    Object {
      "code": "hello2",
      "directoryShortid": "dir1",
      "isBinary": false,
      "sha": undefined,
      "shortid": "1",
      "title": "index.js",
      "uploadId": undefined,
    },
    Object {
      "code": "hello3",
      "directoryShortid": "dir2",
      "isBinary": false,
      "sha": undefined,
      "shortid": "2",
      "title": "index.js",
      "uploadId": undefined,
    },
    Object {
      "code": "hello4",
      "directoryShortid": "dir4",
      "isBinary": false,
      "sha": undefined,
      "shortid": "3",
      "title": "template.md",
      "uploadId": undefined,
    },
    Object {
      "code": "hello5",
      "directoryShortid": "dir5",
      "isBinary": false,
      "sha": undefined,
      "shortid": "4",
      "title": "config.yml",
      "uploadId": undefined,
    },
  ],
}
`;
